[package]
name = "rust-tetris"
version = "0.1.0"
authors = [
  "Ryo Narita <info@codedoc.net>",
  "Naohira Akasaka <b1013169@fun.ac.jp>"
]

[[bin]]
name = 'rust-tetris'

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies]
time = "*"
